// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`task planner should be able to handle multiple filesets per project 1`] = `
{
  "parent:test": [
    "AllExternalDependencies",
    "TsConfig",
    "child:!{projectRoot}/**/*.spec.ts",
    "child:ProjectConfiguration",
    "env:MY_TEST_HASH_ENV",
    "parent:ProjectConfiguration",
    "parent:{projectRoot}/**/*",
    "{workspaceRoot}/.gitignore",
    "{workspaceRoot}/.nxignore",
    "{workspaceRoot}/global1",
    "{workspaceRoot}/global2",
    "{workspaceRoot}/nx.json",
  ],
}
`;

exports[`task planner should build plans where the project graph has circular dependencies 1`] = `
{
  "child:build": [
    "AllExternalDependencies",
    "TsConfig",
    "child:ProjectConfiguration",
    "child:{projectRoot}/**/*",
    "parent:ProjectConfiguration",
    "parent:{projectRoot}/**/*",
    "{workspaceRoot}/.gitignore",
    "{workspaceRoot}/.nxignore",
    "{workspaceRoot}/nx.json",
  ],
  "parent:build": [
    "AllExternalDependencies",
    "TsConfig",
    "child:ProjectConfiguration",
    "child:{projectRoot}/**/*",
    "parent:ProjectConfiguration",
    "parent:{projectRoot}/**/*",
    "{workspaceRoot}/.gitignore",
    "{workspaceRoot}/.nxignore",
    "{workspaceRoot}/nx.json",
  ],
}
`;

exports[`task planner should include npm projects 1`] = `
{
  "app:build": [
    "AllExternalDependencies",
    "TsConfig",
    "app:ProjectConfiguration",
    "app:{projectRoot}/**/*",
    "npm:react",
    "{workspaceRoot}/.gitignore",
    "{workspaceRoot}/.nxignore",
    "{workspaceRoot}/nx.json",
  ],
}
`;

exports[`task planner should make a plan with multiple filesets of a project 1`] = `
{
  "parent:build": [
    "AllExternalDependencies",
    "TsConfig",
    "parent:!{projectRoot}/**/*.spec.ts",
    "parent:ProjectConfiguration",
    "{workspaceRoot}/.gitignore",
    "{workspaceRoot}/.nxignore",
    "{workspaceRoot}/nx.json",
  ],
  "parent:test": [
    "AllExternalDependencies",
    "TsConfig",
    "parent:ProjectConfiguration",
    "parent:{projectRoot}/**/*",
    "{workspaceRoot}/.gitignore",
    "{workspaceRoot}/.nxignore",
    "{workspaceRoot}/nx.json",
  ],
}
`;

exports[`task planner should plan non-default filesets 1`] = `
{
  "parent:build": [
    "AllExternalDependencies",
    "TsConfig",
    "child:ProjectConfiguration",
    "child:{projectRoot}/**/*",
    "parent:!{projectRoot}/**/*.spec.ts",
    "parent:ProjectConfiguration",
    "{workspaceRoot}/.gitignore",
    "{workspaceRoot}/.nxignore",
    "{workspaceRoot}/nx.json",
  ],
}
`;

exports[`task planner should plan the task where the project has dependencies 1`] = `
{
  "parent:build": [
    "AllExternalDependencies",
    "TsConfig",
    "child:ProjectConfiguration",
    "child:{projectRoot}/**/*",
    "parent:ProjectConfiguration",
    "parent:{projectRoot}/**/*",
    "{workspaceRoot}/.gitignore",
    "{workspaceRoot}/.nxignore",
    "{workspaceRoot}/nx.json",
  ],
}
`;

exports[`task planner should use targetDefaults from nx.json 1`] = `
{
  "parent:build": [
    "AllExternalDependencies",
    "TsConfig",
    "child:!{projectRoot}/**/*.spec.ts",
    "child:ProjectConfiguration",
    "parent:!{projectRoot}/**/*.spec.ts",
    "parent:ProjectConfiguration",
    "{workspaceRoot}/.gitignore",
    "{workspaceRoot}/.nxignore",
    "{workspaceRoot}/nx.json",
  ],
}
`;
